# rdoinfo

./: .deps.yml.swp  .gitignore  .gitreview  .pre-commit-config.yaml  .travis.yml  .yamllint  .zuul.yaml  README.md  README.rst  buildsys-tags.yml  deps.yml  deps.yml.orig  groups  project.config  rdo-full.yml  rdo.yml  rdo.yml.orig  requirements.txt  setup.cfg  setup.py  tags.yml  tox.ini  update-puppet-uc.py  update-puppet.sh  update-uc.py  verify.py  zuul.yaml
buildsys-tags/: cloud10s-openstack-epoxy-el10s-build.yml  cloud10s-openstack-epoxy-testing.yml  cloud10s-openstack-flamingo-el10s-build.yml  cloud10s-openstack-flamingo-testing.yml  cloud7-openstack-common-release.yml  cloud7-openstack-common-testing.yml  cloud7-openstack-ocata-release.yml  cloud7-openstack-ocata-testing.yml  cloud7-openstack-pike-release.yml  cloud7-openstack-pike-testing.yml  cloud7-openstack-queens-candidate.yml  cloud7-openstack-queens-release.yml  cloud7-openstack-queens-testing.yml  cloud7-openstack-release-cloudsig.yml  cloud7-openstack-rocky-candidate.yml  cloud7-openstack-rocky-el7-build.yml  cloud7-openstack-rocky-release.yml  cloud7-openstack-rocky-testing.yml  cloud7-openstack-stein-candidate.yml  cloud7-openstack-stein-el7-build.yml  cloud7-openstack-stein-release-cloudsig.yml  cloud7-openstack-stein-release.yml  cloud7-openstack-stein-testing-test.yml  cloud7-openstack-stein-testing.yml  cloud7-openstack-train-candidate.yml  cloud7-openstack-train-el7-build.yml  cloud7-openstack-train-release-cloudsig.yml  cloud7-openstack-train-release.yml  cloud7-openstack-train-testing-test.yml  (+86 more)
(+51 files in other folders)
