[metadata]
name = rdoinfo
summary = Information about RDO releases!
description-file =
    README.rst
author = RDO
author-email = rdo-list@redhat.com
home-page = http://www.rdoproject.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    rdoinfo

[build_sphinx]
source-dir = source
build-dir = build
all_files = 1

